[tool.poetry]
name = "backlog-template"
version = "0.1.0"
description = "Post template issues to backlog"
authors = ["yaumu3"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
toml = "^0.10.1"
keyring = "^21.2.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.8.2"

[tool.isort]
include_trailing_comma = true
line_length = 88
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
